made ui responsive

--- a/style.css
+++ b/style.css
@@ -32,26 +32,26 @@ h1 {
 }
 
 .calculator {
-  width: 70%;
-  padding: 3rem;
+  margin: 2rem;
+  padding: 2rem;
   border-radius: 3rem;
   box-shadow: -4px -4px 4px rgb(0, 0, 0), 4px 4px 4px black;
 }
 
 #output {
-  /* width: 55%; */
   background-color: var(--grey);
   box-shadow: -4px -4px 4px inset rgb(188, 188, 188);
-  height: 5rem;
+  height: 4rem;
   display: flex;
   justify-content: end;
   align-items: center;
   padding: 1rem;
   border-radius: 0.5rem;
   margin: auto;
-  font-size: 2rem;
+  font-size: clamp(1rem, 2vw, 2rem);
   font-weight: 600;
   color: var(--carbon);
+  max-width: 25rem;
 }
 
 .buttons {
@@ -60,17 +60,18 @@ h1 {
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  margin: auto;
+  /* margin: auto; */
   gap: 0.5rem;
+  max-width: 20rem;
   background-color: var(--teal);
   border-radius: 2rem;
-  margin-block: 2rem;
+  margin-block: 1rem;
 }
 
 .dialpad,
 .operator {
-  height: 5rem;
-  width: 5rem;
+  height: 3rem;
+  width: 3rem;
   border-radius: 100%;
   border: none;
   font-size: 1.5rem;
@@ -79,14 +80,15 @@ h1 {
   cursor: pointer;
   box-shadow: -3px -3px 4px inset black;
 }
+
 .erase {
-  height: 5rem;
-  width: 5rem;
+  height: 3rem;
+  width: 3rem;
   border-radius: 100%;
   border: none;
   background-color: var(--black);
   color: var(--grey);
-  font-size: 2rem;
+  font-size: 1rem;
   cursor: pointer;
   box-shadow: -3px -3px 4px inset black;
   color: rgb(225, 42, 42);
@@ -101,4 +103,17 @@ h1 {
 
 .operator {
   color: var(--yellow);
+}
+
+@media (min-width: 480px) {
+  .erase {
+    height: 4rem;
+    width: 4rem;
+    font-size: 1.5rem;
+  }
+  .operator,
+  .dialpad {
+    height: 4rem;
+    width: 4rem;
+  }
 }
