--- a/style.css
+++ b/style.css
@@ -23,32 +23,39 @@ body {
   background-color: var(--ui-surface);
 }
 
-.calculator {
+.calc-outer {
+  width: 100%;
   height: 100%;
   display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
+.calculator {
+  width: 95%;
+  display: flex;
   flex-direction: column;
-  justify-content: end;
 }
 
 #output {
   height: 4rem;
-  padding-block: 4rem;
-  padding-inline: 2rem;
+  padding: 3rem 0.5rem;
   border-radius: 0.5rem;
-  margin-left: auto;
-  font-size: clamp(1.5rem, 2vw, 2rem);
+  width: 90%;
+  display: flex;
+  justify-content: end;
+  margin: 5rem auto;
+  font-size: clamp(1.8rem, 1.9vw, 2rem);
   font-weight: 600;
   color: var(--default-text-color);
 }
 
 .buttons {
-  width: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, 1fr);
   row-gap: 22px;
   column-gap: 13px;
-  padding: 1rem;
   background-color: var(--ui-surface);
 }
 
@@ -98,16 +105,20 @@ body {
 }
 
 @media (min-width: 480px) {
-  .calculator {
-    width: 100dvw;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
+  .calc-outer {
+    justify-content: center;
     align-items: center;
   }
-  .buttons {
-    max-width: 400px;
+
+  .calculator {
+    height: initial;
+    max-width: 500px;
+    box-shadow: 20px 20px 30px var(--button-toplayer),
+      -20px -20px 30px var(--button-toplayer);
+    padding: 0.5rem;
+    border-radius: 2rem;
   }
+
   .dialpad,
   .operator,
   .erase {
@@ -115,12 +126,18 @@ body {
     width: 6rem;
   }
 
+  .buttons {
+    padding: 1rem;
+  }
+
   .buttons div {
     height: 4.5rem;
     width: 6rem;
   }
+
   #output {
-    margin: auto;
+    margin: 1rem auto;
+    background-color: var(--button-toplayer);
   }
 }
 
